[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Odeh <abuzaid163@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.9b0"
flake8 = "^4.0.1"
jupyterlab = "^3.2.1"
pandas= "^1.3.4"
numpy = "1.19.1"
sklearn = "^0.0"
scikit-learn = "^1.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
